# myRAG

./: .dockerignore  .gitignore  README.md  compose.yml  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
myrag/: Dockerfile  pyproject.toml
myrag/myrag/: rag_engine.py  web_ui.py
