[tool.poetry]
name = "myrag"
version = "0.1.0"
description = ""
authors = ["RyosukeDTomita <d310151c2@gmail.com>"]
license = "unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchain-openai = "^0.1.1"
langchain-core = "^0.1.33"
tiktoken = "^0.6.0"
docarray = "^0.40.0"
chromadb = "^0.4.24"
pypdf = "^4.1.0"
redis = "^5.0.3"
chainlit = "^1.0.401"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
